# MeshSlicer

./: CMakeLists.txt  README.md  config.txt
src/: Constants.hpp  graphmodule.cpp  graphmodule.hpp  mainloop.cpp  mainloop.hpp  structs.hpp
src/meshslicer/include/: meshCreator.h  meshData.h  meshSlicer.h  wavefrontObjSerializer.h
src/meshslicer/src/: commandLineParser.cpp  meshData.cpp  meshSlicer.cpp
src/support/: Buffer.h  ComputeProcess.cpp  ComputeProcess.h  shaderutils.hpp
